--- a/src/components/toifalar/toifalar.css
+++ b/src/components/toifalar/toifalar.css
@@ -1,4 +1,7 @@
-
+.tiofalar {
+    display: block;
+    width: 80%;
+}
 
 .table-wrap {
 
@@ -27,9 +30,9 @@
 
 .table-list {
     width: 100%;
-   padding: 0;
-   max-height: 333px;
-   overflow: auto;
+    padding: 0;
+    max-height: 333px;
+    overflow: auto;
 }
 
 .table-list li {
@@ -42,7 +45,7 @@
     justify-content: space-between;
 }
 
-.edit-btn{
+.edit-btn {
     border: none;
     color: #01384D;
     background: #e6ebed;
@@ -50,10 +53,40 @@
     border-radius: 5px;
     margin-right: 10px;
 }
-.delete-btn{
+
+.delete-btn {
     border: none;
     color: #D61F1F;
     background-color: #d99a9a;
     padding: 8px 10px;
     border-radius: 5px;
+}
+
+
+
+.add>button {
+    display: block;
+    width: 135px;
+    height: 40px;
+    background: #01384D;
+    border-radius: 8px;
+    color: #fff;
+    margin-left: auto;
+}
+
+.my-modal{
+    position: absolute;
+    top: -150px;
+    left: 50%;
+    transform: translateX(-135px);
+    width: 270px;
+    height: 300px;
+    padding: 25px;
+    border: 1px solid #000;
+    opacity: 0;
+}
+.my-modal-block{
+    transition: all 0.3s ease-in-out;
+    opacity: 1;
+    top: 150px;
 }
